--- a/src/components/Title/Title.scss
+++ b/src/components/Title/Title.scss
@@ -1,7 +1,8 @@
 @import '/src/functions/pxToRem.scss';
 
 .title {
+  text-align: center;
   font-size: toRem(60);
   color: white;
-  text-shadow: toRem(5) 0 rgb(15, 107, 187); 
+  text-shadow: toRem(5) 0 rgb(174, 178, 181); 
 }
