Add cancel todo item editing, styles for Item

--- a/src/components/List/Item.scss
+++ b/src/components/List/Item.scss
@@ -6,41 +6,47 @@
   align-items: center;
   justify-content: flex-end;
   width: 100%;
-  min-height: toRem(45);
-  border: 1px solid black;
-  font-size: toRem(30);
+  min-height: toRem(60);
+  border-bottom: 1px solid #5a189a;
+  font-family: 'Rubik', sans-serif;
+  font-size: toRem(25);
+  color: #3c096c;
   background: rgb(255, 255, 255);
-
-
-  &__toggle {
-    position: absolute;
-    left: 0;
-  }
 
   &__text {
     width: calc(100% - 100px);
     max-width: toRem(600);
+    height: auto;
     padding-top: toRem(15);
     padding-right: toRem(50);
     padding-bottom: toRem(15);
     word-wrap: break-word;
+    user-select: none;
+    opacity: 1;
+    animation: smooth-out .1s ease-in;
   }
 
   &__editing {
     position: absolute;
     z-index: 10;
-    width: calc(100% - 55px);
-    height: toRem(45);
-    padding: 0 15px;
+    width: calc(100% - 65px);
+    height: toRem(60);
+    padding: 0 toRem(15);
     border: none;
     outline: none;
     font-size: toRem(25);
-    box-shadow: 0 0 10px black;
+    box-shadow: 0 0 10px #5a189a;
   }
 
   &__remove {
     position: absolute;
-    right: toRem(15);
+    right: toRem(10);
+    width: toRem(40);
+    height: toRem(40);
+    border: none;
+    background: url('../../images/icons/delete.png') no-repeat;
+    background-size: contain;
+    cursor: pointer;
   }
 
   &__editing + &__remove {
@@ -48,7 +54,53 @@
   }
 }
 
-.todo-item__toggle:checked + .todo-item__text {
+.toggle {
+  position: absolute;
+  left: toRem(5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: toRem(30);
+  height: toRem(30);
+  border: 1px solid rgba(36, 0, 70, .5);
+  border-radius: 50%;
+  appearance: none;
+
+  &:checked {
+    border: 1px solid rgba(36, 0, 70, 1);;
+  }
+
+  &:checked::before {
+    content: '';
+    width: toRem(25);
+    height: toRem(25);
+    background: url('../../images/icons/done.png') no-repeat;
+    background-size: contain;
+  }  
+}
+
+@keyframes smooth-in {
+  from {
+    opacity: 1;
+  }
+
+  to {
+    opacity: .3;
+  }
+}
+
+@keyframes smooth-out {
+  from {
+    opacity: .3;
+  } 
+
+  to {
+    opacity: 1;
+  }
+}
+
+.toggle:checked + .todo-item__text {
   text-decoration: line-through;
   opacity: .3;
+  animation: smooth-in .1s ease-in;
 }
