--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: rgb(223, 223, 223);
+  background: #9d4edd;
 }
 
 .App {
@@ -11,6 +11,7 @@ body {
   max-width: toRem(600);
   width: 100%;
   margin: 0 auto;
+  padding: 0 toRem(20);
 }
 
 ul {
