Add small style and components changes

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -4,34 +4,30 @@
   position: relative;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: space-between;
   width: 100%;
   height: toRem(40);
   border: none;
-  background: rgb(255, 255, 255);
   font-family: 'Rubik', sans-serif;
+  background: rgb(255, 255, 255);
 }
 
 .count {
-  display: block;
-  width: 25%;
   margin-left: toRem(15);
   font-size: toRem(15);
   color: #3c096c;
 
-  @media (min-width: toRem(361)) and (max-width: toRem(500)) {
-    font-size: 3vw;
+  @media (max-width: toRem(360)) {
+    margin-left: toRem(5);
+    font-size: toRem(12);
   }
 
-  @media (max-width: toRem(360)) {
-    font-size: toRem(13);
+  @media (min-width: toRem(361)) and (max-width: toRem(500)) {
+    font-size: 3vw;
   }
 }
 
 .filters {
-  display: flex;
-  justify-content: center;
-  width: 40%;
 
   &__link {
     margin: 0 toRem(5);
@@ -42,45 +38,57 @@
     color: #3c096c;
     -webkit-tap-highlight-color: transparent;
 
+    @media (max-width: toRem(360)) {
+      margin: 0 toRem(1);
+      padding: toRem(1) toRem(2);
+      font-size: toRem(12);
+    }
+
     @media (min-width: toRem(361)) and (max-width: toRem(500)) {
       font-size: 3vw;
-    }
-
-    @media (max-width: toRem(360)) {
       margin: 0 toRem(2);
-      padding: toRem(1) toRem(3);
-      font-size: toRem(13);
+      padding: toRem(2) toRem(3);
     }
 
-    &:hover:not(.active) {
-      border: 1px solid rgba(69, 9, 108, .5);
-      border-radius: toRem(5);
+    @media (min-width: toRem(768)) {
+      &:hover:not(.active) {
+        border: 1px solid rgba(69, 9, 108, .5);
+        border-radius: toRem(5);
+      }
     }
   }
 }
 
 .clear {
-  position: absolute;
-  right: 0;
-  width: 25%;
   margin-right: toRem(15);
   border: none;
   background: none;
   font-size: toRem(15);
   color: #3c096c;
 
+  @media (max-width: toRem(360)) {
+    margin-right: toRem(5);
+    font-size: toRem(12);
+  }
+
   @media (min-width: toRem(361)) and (max-width: toRem(500)) {
     font-size: 3vw;
   }
   
-  @media (max-width: toRem(360)) {
-    width: 27%;
-    font-size: toRem(13);
+
+  @media (min-width: toRem(769)) {
+    &:hover {
+      cursor: pointer;
+      text-decoration: underline;
+    } 
   }
 
-  &:hover {
-    cursor: pointer;
-    text-decoration: underline;
+  &_hide {
+    visibility: hidden;
+  }
+
+  &_show {
+    visibility: visible;
   }
 }
 
