--- a/src/components/Title/Title.scss
+++ b/src/components/Title/Title.scss
@@ -3,7 +3,7 @@
 .title {
   margin: toRem(30) 0;
   text-align: center;
-  font-family: 'Comfortaa', cursive;
+  font-family: 'Comfortaa', sans-serif;
   font-size: toRem(60);
   color: #ff9e00;
   text-shadow: toRem(5) 0 #7b2cbf; 
