--- a/src/App.scss
+++ b/src/App.scss
@@ -7,11 +7,14 @@ body {
 }
 
 .App {
-  min-width: toRem(400);
+  min-width: toRem(300);
   max-width: toRem(600);
-  width: 100%;
   margin: 0 auto;
   padding: 0 toRem(20);
+}
+
+.container {
+  width: 100%;
 }
 
 ul {
